--- a/app/src/main/res/layout/dialog_add_link.xml
+++ b/app/src/main/res/layout/dialog_add_link.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <androidx.appcompat.widget.AppCompatSpinner
+        android:id="@+id/schemaSpinnerId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="8dp"
