--- a/app/src/main/res/layout/fragment_create_or_edit.xml
+++ b/app/src/main/res/layout/fragment_create_or_edit.xml
@@ -6,9 +6,25 @@
     android:layout_height="match_parent"
     tools:context=".activity.CreateOrEditFragment">
 
-    <ScrollView
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/createOrEditToolbarId"
+        android:visibility="visible"
+        android:background="@color/transparent"
+        android:elevation="2dp"
+        tools:title="Netoltgy"
+        app:navigationIcon="@drawable/ic_back"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <ScrollView
+        android:id="@+id/createOrEditScrollViewId"
+        app:layout_constraintTop_toBottomOf="@id/createOrEditToolbarId"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="0dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -21,6 +37,7 @@
                 android:layout_margin="4dp"
                 android:fontFamily="@font/handwriting"
                 android:inputType="textMultiLine"
+                android:hint="@string/enter_the_idea_content"
                 android:maxLength="100"
                 android:textSize="24sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -98,9 +115,18 @@
                 android:layout_marginHorizontal="4dp"
                 android:autoLink="web"
                 android:paddingHorizontal="4dp"
+                android:layout_marginBottom="16dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/removeLinkBtnId"
                 tools:text="https://medium.com/android-beginners/shapeableimageview-material-components-for-android-cac6edac2c0d" />
+
+            <View
+                android:id="@+id/blankViewId"
+                android:layout_height="16dp"
+                android:layout_width="match_parent"
+                app:layout_constraintTop_toBottomOf="@id/linkTxtViewId"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
 
             <androidx.constraintlayout.widget.Group
                 android:id="@+id/linkGroupId"
