--- a/app/src/main/res/layout/fragment_idea_list.xml
+++ b/app/src/main/res/layout/fragment_idea_list.xml
@@ -7,10 +7,25 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".activity.IdeaListFragment">
 
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/ideaListToolbarId"
+        android:visibility="gone"
+        android:elevation="2dp"
+        android:background="@color/transparent"
+        tools:visibility="visible"
+        tools:title="Netoltgy"
+        app:navigationIcon="@drawable/ic_clear_filter"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+        android:id="@+id/ideaListCoordinatorLayoutId"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ideaListToolbarId"
         app:layout_constraintBottom_toBottomOf="parent">
 
         <androidx.recyclerview.widget.RecyclerView
