--- a/app/src/main/res/layout/item_idea.xml
+++ b/app/src/main/res/layout/item_idea.xml
@@ -60,19 +60,10 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:contentDescription="@string/description_idea_image" />
 
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/linkTxtViewId"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:autoLink="web"
-            app:layout_constraintTop_toBottomOf="@id/imgImgViewId"
-            app:layout_constraintStart_toStartOf="parent"
-            android:visibility="gone"/>
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/linkTxtViewId">
+            app:layout_constraintTop_toBottomOf="@id/imgImgViewId">
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/likesCounterTxtViewId"
