--- a/app/src/main/res/layout/fragment_create_or_edit.xml
+++ b/app/src/main/res/layout/fragment_create_or_edit.xml
@@ -155,5 +155,6 @@
         android:contentDescription="@string/save"
         android:foreground="@drawable/ic_save_to_list"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
