--- a/app/src/main/res/layout/fragment_create_or_edit.xml
+++ b/app/src/main/res/layout/fragment_create_or_edit.xml
@@ -23,6 +23,8 @@
         android:id="@+id/createOrEditScrollViewId"
         app:layout_constraintTop_toBottomOf="@id/createOrEditToolbarId"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:paddingBottom="80dp"
+        android:clipToPadding="false"
         android:layout_width="match_parent"
         android:layout_height="0dp">
 
