--- a/app/src/main/res/layout/fragment_idea_list.xml
+++ b/app/src/main/res/layout/fragment_idea_list.xml
@@ -33,6 +33,8 @@
             android:id="@+id/ideaListViewId"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:paddingBottom="80dp"
+            android:clipToPadding="false"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/item_idea" />
 
