--- a/app/src/main/res/layout/fragment_idea_list.xml
+++ b/app/src/main/res/layout/fragment_idea_list.xml
@@ -9,6 +9,15 @@
     tools:context=".fragments.IdeaListFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/authorNameToolbarId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="2dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
+    <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/ideaListToolbarId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -17,7 +26,7 @@
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/authorNameToolbarId"
         app:navigationIcon="@drawable/ic_clear_filter"
         tools:title="Netoltgy"
         tools:visibility="visible" />
