--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -15,6 +15,7 @@
         android:layout_marginVertical="8dp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:counterMaxLength="15"
         android:hint="@string/name"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
