--- a/app/src/main/res/menu/context_menu.xml
+++ b/app/src/main/res/menu/context_menu.xml
@@ -3,7 +3,7 @@
     <item
         android:id="@+id/edit_idea"
         android:orderInCategory="100"
-        android:title="@string/edit" />
+        android:title="@string/edit_idea" />
     <item
         android:id="@+id/delete_idea"
         android:orderInCategory="100"
